Page MenuHome GnuPG

Kleopatra: Wrong success/error messages when changing the reset code/PUK of an OpenPGP card
Closed, ResolvedPublic

Description

If one enters a wrong Admin PIN or enters a too short reset code then Kleopatra reports "Unblocking the PIN failed: <error text>". And if one doesn't make an error then Kleopatra reports "Unblocked and set a new PIN successfully."

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.May 16 2024, 4:19 PM
ikloecker moved this task from Backlog to WiP on the vsd33 board.

Fixed and backported for VSD 3.3.

Note that the pin entry dialog asks for "reset code" instead of PUK. That needs to be changed in GnuPG.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Oct 1 2024, 3:55 PM
TobiasFella moved this task from QA to vsd-3.3.0 on the vsd33 board.
TobiasFella edited projects, added vsd33 (vsd-3.3.0); removed vsd33.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Mar 11 2025, 3:36 PM