Fix wrong error and success messages when changing the OpenPGP card PUK

GnuPG-bug-id: 7122